--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -81,13 +81,13 @@
 
     </div>
 
+<!-- href="{% url 'articles' %}" -->
     <div class="col-md-6" id="sidebar">
       <div class="row" style="margin-top: 10px;">
         <div class="col-md-3"></div>
         <div class="col-md-3"></div>
         <div class="col-md-3">
-          <a class="btn btn-default btn-block" id="cancel-button"
-             href="{% url 'articles' %}">{% trans 'Exit' %}
+          <a class="btn btn-default btn-block" id="cancel-button">{% trans 'Exit' %}
           </a>
 
         </div>
