--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -109,13 +109,9 @@
                  data-width="70px" data-size="mini">
         </div>
       
-        {% include 'articles/partial/partial_sentence.html' with author=user %}
+        <div id="right-update">
         {% include 'articles/partial/partial_summary.html' %}
-        <div id="others-list"><span>
-        {% for author in data.authors %}
-          {% include 'articles/partial/partial_sentence.html' with author=author %}
-        {% endfor %}
-        </span></div>
+        </div>
 
         <div id="hided-number-panel" class="panel-heading text-center">
           <i>Hided <span class="omitted-number">?</span> unchanged version</i>
@@ -136,8 +132,9 @@
       (function () {
         var current_version = {{ data.current_version_json | safe }};
         var current_user = "{{ user }}";
+        //console.log(current_user);
         var json_str_array = {{ data.json|safe }};
-        var summary_list = {{ data.summary | safe }};
+        var summary_list = {{ data.summary|safe }};
         init_page(current_version, current_user, json_str_array, summary_list);
       })();
     </script>
