--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -1,3 +1,5 @@
+{% include 'articles/partial/partial_sentence.html' with author=user %}
+
 <div class="sentence-block summary-block">
   {% csrf_token %}
   <input type="hidden" name="version_id" value="0">
@@ -18,3 +20,9 @@
     <i>Version details:</i>
   </div>-->
 </div>
+
+<div id="others-list"><span>
+  {% for author in data.authors %}
+    {% include 'articles/partial/partial_sentence.html' with author=author %}
+  {% endfor %}
+</span></div>
