Move event listeners to #right-update & clean codes

--- a/ception/articles/templates/articles/partial/partial_article.html
+++ b/ception/articles/templates/articles/partial/partial_article.html
@@ -19,7 +19,7 @@
         </span>
         <span class="edit">
           <span class="glyphicon glyphicon-pencil"></span>
-          10 Edits
+          {{ article.num_editors|default:0 }} Editors
         </span>
       </div>
     </div>
