--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -44,7 +44,7 @@
                   </a>
                 </li>
                 <li><a href="{% url 'articles' %}">{% trans 'Articles' %}</a></li>
-                <li><a href="{% url 'network' %}">{% trans 'Network' %}</a></li>
+                <!-- <li><a href="{% url 'network' %}">{% trans 'Network' %}</a></li> -->
               </ul>
               {% if not hide_search %}
                 <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}">
