--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -86,14 +86,14 @@ ins {
     width: calc(100% - 20px);
 }
 
-.sentence-comment {
+/*.sentence-comment {
     border-bottom: 1px solid #e3e3e3;
     margin-left: 10px;
     width: -moz-calc(100% - 20px);
     width: -webkit-calc(100% - 20px);
     width: calc(100% - 20px);
 }
-
+*/
 .sentence-comment-list {
     margin-left: 15px;
     width: -moz-calc(100% - 20px);
@@ -106,9 +106,14 @@ ins {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
-
 .sentence-comment-list .sentence-comment:last-child {
     border-bottom: none;
+}
+.sentence-comment-content {
+    height: 34px;
+}
+.sentence-comment-content:focus {
+    height: 54px;
 }
 
 .sentence-block-left {
