--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -9,8 +9,8 @@
       <h5>
         <a>Summary</a>
         <span id="summary-span"> ? of ? merged</span>
-        <div id="summary-merge-button" style="display: inline-block; float: right; margin-right: 10px;">
-          <span type="button" class="glyphicon glyphicon-ok accept-button"></span>
+        <div id="summary-merge-button" class="accept-button" style="display: inline-block; float: right; margin-right: 20px;">
+          <span type="button" class="glyphicon glyphicon-ok"></span>
         </div>
       </h5>
       <div class="sentence-content hide-del-class summary-content context-menu-activated"></div>
