--- a/ception/articles/templates/articles/write.html
+++ b/ception/articles/templates/articles/write.html
@@ -9,7 +9,7 @@
 {% block main %}
   <ol class="breadcrumb">
     <li><a href="{% url 'articles' %}">{% trans 'Articles' %}</a></li>
-    <li class="active">{% trans 'Write Article' %}</li>
+    <li class="active">{% trans 'Upload Article' %}</li>
   </ol>
   <form action="{% url 'write' %}" method="post" role="form">
     {% csrf_token %}
@@ -31,7 +31,9 @@
     {% endfor %}
     <div class="form-group">
       <button type="button" class="btn btn-primary publish">{% trans 'Publish' %}</button>
+    {% if show_drafts %}
       <button type="button" class="btn btn-default draft">{% trans 'Save Draft' %}</button>
+    {% endif %}
       <button type="button" class="btn btn-default preview" data-toggle="modal" data-target="#preview">{% trans 'Preview' %}</button>
       <a href="{% url 'articles' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
     </div>
