--- a/ception/articles/templates/articles/drafts.html
+++ b/ception/articles/templates/articles/drafts.html
@@ -22,7 +22,7 @@
     <tbody>
       {% for article in drafts %}
         <tr>
-          <td><a href="{% url 'edit_article' article.pk %}">{{ article.title }}</a></td>
+          <td><a href="{% url 'edit' id=article.pk %}">{{ article.title }}</a></td>
           <td>{{ article.get_summary_as_markdown|safe }}</td>
           <td>
             {% for tag in article.get_tags %}
