show/hide delete, remove 'show context'

--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -103,10 +103,8 @@
       <div id="sentence-list" hidden="hidden">
         <div class="sentence-list-header">
           <!-- <div class="header-text h4">Current sentence</div> -->
-          <input id="toggle-sentence-view" class="pull-right" type="checkbox" data-toggle="toggle" data-on="Context" data-off="Context"
-                 data-width="70px" data-size="mini">
-          <input id="hide-del-toggle" class="pull-right" type="checkbox" data-toggle="toggle" data-on="Delete " data-off="Delete "
-                 data-width="70px" data-size="mini">
+          <input id="hide-del-toggle" class="pull-right" type="checkbox" data-toggle="toggle" data-on="hide delete " data-off="show delete "
+                 data-width="90px" data-size="mini">
         </div>
       
         <div id="right-update">
