--- a/ception/articles/templates/articles/merge-modal.html
+++ b/ception/articles/templates/articles/merge-modal.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <span class="modal-title h4" id="myModalLabel">Merge Confirmation</span>
+        <span class="modal-title h4" id="myModalLabel">Confirm Overwriting</span>
         <div class="pull-right" style="margin-right: 25px;">
           <input id="hide-del-modal" type="checkbox" data-width="70px" data-size="mini" data-toggle="toggle" data-on="Delete "
             data-off="Delete ">
