--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -1,4 +1,4 @@
-{% include 'articles/partial/partial_sentence.html' with author=user %}
+{% include 'articles/partial/partial_sentence.html' with author=user author_name='Myself' %}
 
 <div class="sentence-block summary-block">
   {% csrf_token %}
