--- a/ception/articles/templates/articles/partial/partial_sentence.html
+++ b/ception/articles/templates/articles/partial/partial_sentence.html
@@ -6,7 +6,7 @@
       <h5>
 <!-- {# <a href="{% url 'profile' author.username %}">{{ author.profile.get_screen_name }}</a> #}
         <a>{{ author.profile.get_screen_name }}</a> -->
-        <span class="label {% if author == user %}label-default{% else %}label-primary{% endif %}">{{ author.profile.get_screen_name }}</span>
+        <span class="label {% if author == user %}label-info{% else %}label-primary{% endif %}">{{ author_name|default:author.profile.get_screen_name }}</span>
         <span class="label label-danger hidden" id="new-label-{{ author }}" >New</span>
         <!-- <small class="time">editing now</small> -->
         <div class="pull-right">
@@ -28,6 +28,7 @@
         <div class="sentence-content sentence-content-others hide-del-class"></div>
         <textarea id="editor-{{ author }}" disabled></textarea>
         <script>
+          // TODO: Do not use CKEditor
           var editor_instance = CKEDITOR.replace("editor-{{ author }}", {
                 removePlugins: 'toolbar, elementspath, lite',
                 allowedContent: true,
