Hide write button & ckeditor previews for study

--- a/ception/articles/templates/articles/partial/partial_article.html
+++ b/ception/articles/templates/articles/partial/partial_article.html
@@ -1,7 +1,7 @@
 <article>
   <div class="row">
     <div class="col-md-8">
-      <h2>{{ article.title }}</h2>
+      <h2><a href="{% url 'edit' article.id %}">{{ article.title }}</a></h2>
       <div class="info">
         <span class="date">
           <span class="glyphicon glyphicon-calendar"></span>
@@ -23,27 +23,25 @@
         </span>
       </div>
     </div>
-    <div class="col-md-4" style="margin-top: 10px">
+    <div class="col-md-2"></div>
+    <div class="col-md-2" style="margin-top: 10px">
       <div class="btn-group btn-group-justified" role="group" aria-label="...">
         <div class="btn-group" role="group">
-          <a href="{% url 'edit_compare' article.id %}" type="button" class="btn btn-default">Edit with UI #1 (Baseline)</a>
-        </div>
-        <div class="btn-group" role="group">
-          <a href="{% url 'edit' article.id %}" type="button" class="btn btn-default"><b>Edit with UI #2 (CEPT)</b></a>
+          <a href="{% url 'edit' article.id %}" type="button" class="btn btn-default"><b>Edit with CEPT</b></a>
         </div>
       </div>
     </div>
   </div>
 
 
-  <textarea class="content" id="{{ article.id }}" disabled>
+  <textarea class="content hidden" id="{{ article.id }}" disabled>
     {{ article.content|safe }}
   </textarea>
   <script>
-    (function() {
+    /*(function() {
       CKEDITOR.config.height = 200;
       var editor = CKEDITOR.replace( "{{ article.id }}");
-    })();
+    })();*/
   </script>
   {#  {% if article.get_tags %}#}
   {#    <div class="tags">#}
