--- a/ception/articles/templates/articles/articles.html
+++ b/ception/articles/templates/articles/articles.html
@@ -10,9 +10,9 @@
 
 {% block main %}
   <div class="page-header">
-    <a href="{% url 'write' %}" class="btn btn-primary pull-right">
+    <!--<a href="{% url 'write' %}" class="btn btn-primary pull-right">
       <span class="glyphicon glyphicon-pencil"></span> {% trans 'Upload Article' %}
-    </a>
+    </a>-->
   {% if show_drafts %}
     <a href="{% url 'drafts' %}" class="btn btn-default pull-right" style="margin-right: .8em">{% trans 'Drafts' %}</a>
   {% endif %}
