Initally hide right panel for finer UX

--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -100,7 +100,7 @@
         </div>
      
       </div>
-      <div id="sentence-list" hidden="hidden">
+      <div id="sentence-list" class="hidden">
         <div class="sentence-list-header">
           <!-- <div class="header-text h4">Current sentence</div> -->
           <input id="toggle-sentence-view" class="pull-right" type="checkbox" data-toggle="toggle" data-on="Hide context" data-off="Show context"
@@ -113,7 +113,7 @@
         {% include 'articles/partial/partial_summary.html' %}
         </div>
 
-        <div id="hided-number-panel" class="panel-heading text-center">
+        <div id="hided-number-panel" class="panel-heading text-center hidden">
           <i>Hided <span class="omitted-number">?</span> unchanged version</i>
         </div>
         <div class="sentence-list-footer">
