--- a/ception/articles/templates/articles/partial/partial_sentence.html
+++ b/ception/articles/templates/articles/partial/partial_sentence.html
@@ -1,4 +1,4 @@
-<div class="sentence-block" data-author="{{ author }}" id="{{ author }}">
+<div class="sentence-block {{ hidden }}" data-author="{{ author }}" id="{{ author }}">
   {% csrf_token %}
   <div class="row">
     {#      <a href="{% url 'profile' author.username %}"><img src="{{ author.profile.get_picture }}" class="sentence-portrait"></a>#}
