--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -10,7 +10,7 @@
     {# <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> #}
     <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     {# <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> #}
-    <link href="{% static 'css/bootcamp.css' %}?v=1" rel="stylesheet">
+    <link href="{% static 'css/bootcamp.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
     {# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> #}
     <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
